Select a peer, open data channel

--- a/DataChannelOrtc.UWP/DataChannelOrtc.UWP/PeersListPage.xaml
+++ b/DataChannelOrtc.UWP/DataChannelOrtc.UWP/PeersListPage.xaml
@@ -10,6 +10,8 @@
 
     <Grid>
         <ListView x:Name="peersListView" 
+                  SelectionMode="Single"
+                  IsItemClickEnabled="True"
                   Margin="10">
             <ListView.ItemTemplate>
                 <DataTemplate>
